--- a/postgres_ha/docker-compose.yaml
+++ b/postgres_ha/docker-compose.yaml
@@ -12,8 +12,12 @@ services:
       - "5432:5432"
     volumes:
       - pg-master-data:/var/lib/postgresql/data
-      - ./master/pg_hba.conf:/var/lib/postgresql/data/pg_hba.conf
-      - ./master/postgresql.conf:/var/lib/postgresql/data/postgresql.conf
+      - ./master/pg_hba.conf:/etc/postgresql/pg_hba.conf
+      - ./master/postgresql.conf:/etc/postgresql/postgresql.conf
+    command: >
+      postgres
+      -c config_file=/etc/postgresql/postgresql.conf
+      -c hba_file=/etc/postgresql/pg_hba.conf
     networks:
       - postgres-net
     restart: unless-stopped
