feat: add dbeaver connection conf

--- a/postgres_ha/master/pg_hba.conf
+++ b/postgres_ha/master/pg_hba.conf
@@ -2,4 +2,8 @@
 local   all             all                                     trust
 
 # Allow replication connections from within Docker network
-host    replication     replicator      0.0.0.0/0                md5
+host    replication     replicator      0.0.0.0/0               trust
+
+# Allow connection from DBeaver
+host    all             all             172.26.0.1/32           md5
+
