--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   zookeeper:    
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:7.3.3
     hostname: zookeeper
     container_name: zookeeper
     ports:
@@ -15,20 +15,20 @@ services:
       - kafka-mb
 
   broker:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:7.3.3
     hostname: broker
     container_name: broker
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"
-      - "29092:29092"
+      - "9092:9092"     # akses dari host
+      - "29092:29092"   # akses dari container lain
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,SSL:SSL
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092,SSL://broker:9093
-      KAFKA_INTER_BROKER_LISTENER_NAME: SSL
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
@@ -38,12 +38,11 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_JMX_PORT: 9101
       KAFKA_JMX_HOSTNAME: localhost
-      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: HTTPS
     networks:
       - kafka-mb
 
   schema-registry:
-    image: confluentinc/cp-schema-registry:latest
+    image: confluentinc/cp-schema-registry:7.3.3
     hostname: schema-registry
     container_name: schema-registry
     depends_on:
@@ -52,9 +51,9 @@ services:
       - "8081:8081"
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: SSL://broker:9093
-      SCHEMA_REGISTRY_LISTENERS: https://schema-registry:8081
-      SCHEMA_REGISTRY_URL: https://schema-registry:8081
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://broker:29092
+      SCHEMA_REGISTRY_LISTENERS: http://schema-registry:8081
+      SCHEMA_REGISTRY_URL: http://schema-registry:8081
     networks:
       - kafka-mb
 
@@ -67,15 +66,12 @@ services:
           connections:
             docker-kafka-server:
               properties:
-                bootstrap.servers: "SSL://broker:9093"
+                bootstrap.servers: "PLAINTEXT://broker:29092"
               schema-registry:
-                url: "https://schema-registry:8081"
-              connect:
-                - name: "connect"
-                  url: "http://connect:8083"
+                url: "http://schema-registry:8081"
     ports:
       - 29081:8080
-    links:
+    depends_on:
       - broker
       - schema-registry
     networks:
