feat: add new config in pg_hba.conf

--- a/postgres_ha/master/pg_hba.conf
+++ b/postgres_ha/master/pg_hba.conf
@@ -1,9 +1,11 @@
-# Allow local connections
+# Local
 local   all             all                                     trust
 
-# Allow replication connections from within Docker network
+# Replication
 host    replication     replicator      0.0.0.0/0               trust
 
-# Allow connection from DBeaver
-host    all             all             172.26.0.1/32           md5
+# DBeaver on host
+host    all             all             172.26.0.1/32           scram-sha-256
 
+# App in 172.19.x subnet
+host    all             all             172.19.0.0/16           scram-sha-256
