--- a/sonarqube/docker-compose.yaml
+++ b/sonarqube/docker-compose.yaml
@@ -2,13 +2,24 @@ version: '3.8'
 
 services:
   sonarqube:
-    image: sonarqube:lts
+    image: sonarqube:latest
     container_name: sonarqube
     ports:
       - "9000:9000"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     environment:
-      SONAR_JDBC_URL: jdbc:postgresql://@host.docker.internal:5432/sonarqube
-      SONAR_JDBC_USERNAME: postgres
-      SONAR_JDBC_PASSWORD: postgres
+      - SONAR_JDBC_URL=jdbc:postgresql://postgres-master:5432/postgres
+      - SONAR_JDBC_USERNAME=postgres
+      - SONAR_JDBC_PASSWORD=postgres
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+    networks:
+      - sonar-net
+
+networks:
+  sonar-net:
+    external: true
+
+volumes:
+  sonarqube_data:
+  sonarqube_extensions:
