--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     networks:
-      - kafka-mb
+      - kafka-network
 
   broker:
     image: confluentinc/cp-kafka:7.3.3
@@ -39,7 +39,7 @@ services:
       KAFKA_JMX_PORT: 9101
       KAFKA_JMX_HOSTNAME: localhost
     networks:
-      - kafka-mb
+      - kafka-network
 
   schema-registry:
     image: confluentinc/cp-schema-registry:7.3.3
@@ -55,28 +55,31 @@ services:
       SCHEMA_REGISTRY_LISTENERS: http://schema-registry:8081
       SCHEMA_REGISTRY_URL: http://schema-registry:8081
     networks:
-      - kafka-mb
+      - kafka-network
 
   akhq:
     image: tchiotludo/akhq
     container_name: akhq
+    ports:
+      - "29081:8080"
     environment:
       AKHQ_CONFIGURATION: |
         akhq:
+          server:
+            servlet:
+              context-path: /
           connections:
             docker-kafka-server:
               properties:
                 bootstrap.servers: "PLAINTEXT://broker:29092"
               schema-registry:
                 url: "http://schema-registry:8081"
-    ports:
-      - 29081:8080
     depends_on:
       - broker
       - schema-registry
     networks:
-      - kafka-mb    
+      - kafka-network
 
 networks:
-  kafka-mb:
+  kafka-network:
     driver: bridge
