--- a/redis-cluster/redis-master-1.conf
+++ b/redis-cluster/redis-master-1.conf
@@ -1,8 +1,10 @@
-
-requirepass test123
-user test on >test123 ~* +@all
-
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
+cluster-announce-ip 127.0.0.1
+cluster-announce-port 7001
+cluster-announce-bus-port 17001
 appendonly yes
+
+requirepass test123
+user test on >test123 ~* +@all
