refactor: update conf files

--- a/redis-cluster/docker-compose.yaml
+++ b/redis-cluster/docker-compose.yaml
@@ -1,4 +1,3 @@
-
 version: '3.8'
 
 services:
@@ -8,9 +7,13 @@ services:
     command: ["redis-server", "/usr/local/etc/redis/redis-master-1.conf"]
     volumes:
       - ./redis-master-1.conf:/usr/local/etc/redis/redis-master-1.conf
+      - redis-master-1-data:/data
     ports:
       - "7001:6379"
       - "17001:16379"
+    networks:
+      - redis-cluster
+    restart: unless-stopped
 
   redis-master-2:
     image: redis:7.0
@@ -18,9 +21,13 @@ services:
     command: ["redis-server", "/usr/local/etc/redis/redis-master-2.conf"]
     volumes:
       - ./redis-master-2.conf:/usr/local/etc/redis/redis-master-2.conf
+      - redis-master-2-data:/data
     ports:
       - "7002:6379"
       - "17002:16379"
+    networks:
+      - redis-cluster
+    restart: unless-stopped
 
   redis-master-3:
     image: redis:7.0
@@ -28,9 +35,13 @@ services:
     command: ["redis-server", "/usr/local/etc/redis/redis-master-3.conf"]
     volumes:
       - ./redis-master-3.conf:/usr/local/etc/redis/redis-master-3.conf
+      - redis-master-3-data:/data
     ports:
       - "7003:6379"
       - "17003:16379"
+    networks:
+      - redis-cluster
+    restart: unless-stopped
 
   redis-slave-1:
     image: redis:7.0
@@ -38,9 +49,13 @@ services:
     command: ["redis-server", "/usr/local/etc/redis/redis-slave-1.conf"]
     volumes:
       - ./redis-slave-1.conf:/usr/local/etc/redis/redis-slave-1.conf
+      - redis-slave-1-data:/data
     ports:
       - "7004:6379"
       - "17004:16379"
+    networks:
+      - redis-cluster
+    restart: unless-stopped
 
   redis-slave-2:
     image: redis:7.0
@@ -48,16 +63,36 @@ services:
     command: ["redis-server", "/usr/local/etc/redis/redis-slave-2.conf"]
     volumes:
       - ./redis-slave-2.conf:/usr/local/etc/redis/redis-slave-2.conf
+      - redis-slave-2-data:/data
     ports:
       - "7005:6379"
       - "17005:16379"
-      
+    networks:
+      - redis-cluster
+    restart: unless-stopped
+
   redis-slave-3:
     image: redis:7.0
     container_name: redis-slave-3
     command: ["redis-server", "/usr/local/etc/redis/redis-slave-3.conf"]
     volumes:
       - ./redis-slave-3.conf:/usr/local/etc/redis/redis-slave-3.conf
+      - redis-slave-3-data:/data
     ports:
       - "7006:6379"
       - "17006:16379"
+    networks:
+      - redis-cluster
+    restart: unless-stopped
+
+volumes:
+  redis-master-1-data:
+  redis-master-2-data:
+  redis-master-3-data:
+  redis-slave-1-data:
+  redis-slave-2-data:
+  redis-slave-3-data:
+
+networks:
+  redis-cluster:
+    driver: bridge
