--- a/redis-cluster/redis-master-2.conf
+++ b/redis-cluster/redis-master-2.conf
@@ -1,9 +1,9 @@
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
-cluster-announce-ip 127.0.0.1
-cluster-announce-port 7002
-cluster-announce-bus-port 17002
+cluster-announce-ip redis-master-2
+cluster-announce-port 6379
+cluster-announce-bus-port 16379
 appendonly yes
 
 requirepass test123
