--- a/redis-cluster/redis-slave-3.conf
+++ b/redis-cluster/redis-slave-3.conf
@@ -1,10 +1,11 @@
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
-cluster-announce-ip 127.0.0.1
-cluster-announce-port 7006
-cluster-announce-bus-port 17006
+cluster-announce-ip redis-slave-3
+cluster-announce-port 6379
+cluster-announce-bus-port 16379
 appendonly yes
 
 requirepass test123
+masterauth test123
 user test on >test123 ~* +@all
